--- a/LeFrenchMelee.Model/LeFrenchMelee.Model.csproj
+++ b/LeFrenchMelee.Model/LeFrenchMelee.Model.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdditionalSubField.cs" />
     <Compile Include="Enum\Character.cs" />
+    <Compile Include="Enum\FormFieldType.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
