--- a/LeFrenchMelee.Web/LeFrenchMelee.Web.csproj
+++ b/LeFrenchMelee.Web/LeFrenchMelee.Web.csproj
@@ -201,6 +201,7 @@
     <Content Include="Scripts\calendar.js" />
     <Content Include="Scripts\fullcalendar.min.js" />
     <Content Include="Scripts\internationalization\datepicker-fr.js" />
+    <Content Include="Scripts\internationalization\fr.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
