--- a/LeFrenchMelee.Web/LeFrenchMelee.Web.csproj
+++ b/LeFrenchMelee.Web/LeFrenchMelee.Web.csproj
@@ -170,12 +170,14 @@
     <Compile Include="Controllers\AbstractController.cs" />
     <Compile Include="Controllers\Api\TournamentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\TournamentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\RestHelper.cs" />
     <Compile Include="Models\AbstractViewModel.cs" />
+    <Compile Include="Models\NewsViewModel.cs" />
     <Compile Include="Models\TournamentViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -228,6 +230,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Tournament\Create.cshtml" />
     <Content Include="Views\Tournament\Details.cshtml" />
+    <Content Include="Views\News\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
