--- a/LeFrenchMelee.Data/LeFrenchMelee.Data.csproj
+++ b/LeFrenchMelee.Data/LeFrenchMelee.Data.csproj
@@ -65,6 +65,7 @@
     <Compile Include="MeleeContext.cs" />
     <Compile Include="MeleeContextInitializer.cs" />
     <Compile Include="MemberDao.cs" />
+    <Compile Include="NewsDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TournamentDao.cs" />
     <Compile Include="UnitOfWork.cs" />
